[gd_scene load_steps=5 format=3 uid="uid://dmxjxin8bnpv1"]

[ext_resource type="Script" uid="uid://b077fqaqkbvy0" path="res://Scripts/settings_menu.gd" id="1_7y5a0"]
[ext_resource type="Texture2D" uid="uid://cwqgt6fgys8yt" path="res://Assets/menu-bg-1.png" id="1_8ef0u"]
[ext_resource type="Texture2D" uid="uid://dfvof155ylw5g" path="res://Assets/cancel-btn.png" id="2_7y5a0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ef0u"]
bg_color = Color(0.130829, 0.170023, 0.265288, 1)

[node name="SettingsMenu" type="Node2D"]
script = ExtResource("1_7y5a0")

[node name="Menu-bg-1" type="Sprite2D" parent="."]
modulate = Color(0.823054, 0.784906, 0.800013, 1)
texture_filter = 1
scale = Vector2(6, 6)
texture = ExtResource("1_8ef0u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -125.0
offset_top = -79.0
offset_right = 125.0
offset_bottom = 81.0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Volume Settings"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MusicTitle" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Music: "

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
value = 80.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SFXTitle" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "SFX: "

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
value = 80.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="ExitButton" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_8ef0u")
text = "Exit Game"

[node name="TextureButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 120.0
offset_top = -160.0
offset_right = 160.0
offset_bottom = -120.0
texture_normal = ExtResource("2_7y5a0")
stretch_mode = 0

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
